# project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml
noteboks/: exemple.ipynb
