[tool.poetry]
name = "template"#name of your module
version = "0.0.1"#version of your module
description = "Template for repo"#description of your modeél
authors = ["Edouard Koehn"]
license = "MIT License"

# Main dependencies
[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Dev dependencies
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

#Test dependencies
[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''
# Scripts of your module
[tool.poetry.scripts]
#spectral_clustering = "clustering:spectral_clustering.spectral_clustering"
