[project]
name = "template"
version = "0.1.0"
description = "Template for repo"
authors = [{ name = "Edouard Koehn" }]
requires-python = ">=3.10,<3.12"
license = "MIT"

[dependency-groups]
dev = ["pre-commit>=4.2.0,<5"]
test = ["pytest>=8.3.5,<9"]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''
#spectral_clustering = "clustering:spectral_clustering.spectral_clustering"
